--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -4,10 +4,18 @@ ja:
     register: '登録'
     logout: 'ログアウト'
   users:
+    create:
+      success: 'アカウント登録が完了しました'
+      fail: 'アカウント登録に失敗しました'
     new:
       title: 'ユーザー登録'
       to_login_page: 'ログインへ'
   user_sessions:
+    create:
+      success: 'ログインしました'
+      fail: 'ログインに失敗しました'
+    destroy:
+      success: 'ログアウトしました'
     new:
       title: 'ログイン'
       to_register_page: '登録ページへ'
