Add: boardモデルで大喜利の一覧を作成
　大喜利一覧ページを作成し、ダミーデータを作成した。
 未ログイン時に回答ページなどに行けないようにするメソッドを追加

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -2,7 +2,9 @@ ja:
   activerecord:
     models:
       user: 'ユーザー'
-      board: '掲示板'
+      board:
+        title: 'タイトル'
+        body: '本文'
     attributes:
       user:
         email: 'メールアドレス'
